[EPMCDLAB-268]: fixed markup; added wrap and columns classes

--- a/services/self-service/src/main/resources/webapp/src/assets/styles/_general.css
+++ b/services/self-service/src/main/resources/webapp/src/assets/styles/_general.css
@@ -62,10 +62,17 @@ input[type='number']::placeholder {
   color: #718ba6;
 }
 
-.control-group {
+.control-group, .row-wrap {
   display: flex;
   flex-flow: row wrap;
   padding-bottom: 20px;
+}
+.row-wrap {
+  padding-bottom: 0;
+}
+
+.row-wrap .col {
+  width: 50%;
 }
 
 .control-group .label {
